--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,36 @@
+/************************/
+/****** colors **********/
+/************************/
+/*
+bright blue #20C5EF
+red #E85252
+light green #B0EDA0
+yellow: #F9F581
+light orange yellow: F9E581
+water blue: #a7cdf2
+medium blue: #9bbff4
+*/
+
+
+/******************************/
+/****** General *********/
+/******************************/
+
+button:hover {
+  background-color: red;
+}
+.redButton {
+  background-color: #E85252;
+}
+
+.blueButton {
+  background-color: #a7cdf2;
+}
+.greenButton {
+  background-color: #bbdaa4;
+  color: black;
+}
+
 .App {
   text-align: center;
 }
@@ -34,3 +67,54 @@
 .error-placeholder {
   color: blue;
 }
+
+/******************************/
+/****** Home page *********/
+/******************************/
+header {
+  height: 30%;
+  width: 100%;
+  /* background-color: #bbdaa4; */
+  border-bottom:  solid #bbdaa4;
+  color: #9bbff4;
+
+  /* background-color: blue; */
+}
+
+body {
+  background-color: #FEFAF1;
+}
+
+/******************************/
+/****** FormContainer *********/
+/******************************/
+
+.toggleManual {
+  background-color: #F9E581;
+  color: black;
+}
+/******************************/
+/**** Set pin forms   *********/
+/******************************/
+
+.setPinButton {
+  background-color: #20C5EF;
+  color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/******************************/
+/**** Form/EditForm   *********/
+/******************************/
