change sizing of header on AddHikeModal

--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,10 @@ body {
   color: black;
 }
 
+.addh2 {
+  margin-bottom: 4%;
+}
+
 
 /******************************/
 /****** BaseForm *********/
