added styling to upload gps track form in TrackForm

--- a/src/App.css
+++ b/src/App.css
@@ -197,7 +197,7 @@ body {
   margin-top: 5%;
 }
 
-.importImage {
+.importFile {
   display: block;
   padding: 10px;
   -webkit-border-radius: 5px;
