--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,10 @@ body {
 
 .addh2 {
   margin-bottom: 4%;
+  background-color: #bbdaa4;
+  padding: 1%;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
 }
 
 
@@ -283,6 +287,14 @@ list-style-type: none !important;
 
 .addLeftMargin {
   margin-left: 1%;
+}
+
+.edith3 {
+  margin-bottom: 4%;
+  background-color: #a7cdf2;
+  padding: 1%;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
 }
 /******************************/
 /**** success and error modals   *********/
