--- a/src/App.css
+++ b/src/App.css
@@ -289,6 +289,14 @@ list-style-type: none !important;
 .addLeftMargin {
   margin-left: 1%;
 }
+
+.edith3 {
+  margin-bottom: 4%;
+  background-color: #a7cdf2;
+  padding: 1%;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+}
 /******************************/
 /**** success and error modals   *********/
 /******************************/
