changed class on <p> where Descriptiand notes text is displayed in HikeDetailsModal so that it hopfully will preserve the line breaks the user users to enter the text

--- a/src/App.css
+++ b/src/App.css
@@ -297,6 +297,10 @@ list-style-type: none !important;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
 }
+
+.textForDetails {
+  white-space: pre-wrap;
+}
 /******************************/
 /**** success and error modals   *********/
 /******************************/
