--- a/src/App.css
+++ b/src/App.css
@@ -304,7 +304,7 @@ list-style-type: none !important;
 .details {
   /* border: solid 1px blue; */
   /* background-color: #F2F9F2; */
-  background-color: #F2F9F2;
+  background-color: #EEF7FD;
   margin-bottom: 1%;
   padding: 2%;
   -webkit-border-radius: 5px;
