--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ medium blue: #9bbff4
 }
 
 .greenUnderline {
-  border-bottom: solid #bbdaa4;
+  border-bottom: 10px solid #bbdaa4;
 }
 
 .blueText {
@@ -301,14 +301,31 @@ list-style-type: none !important;
   -moz-border-radius: 5px;
 }
 
+ /* EEF7FD */
+.details h3 {
+  background-color: #EEF7FD;
+  margin-bottom: 1%;
+  padding: 0.5%;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-bottom: 2px solid #bbdaa4;
+}
+
+.details p {
+  padding: 1%;
+}
+
+
 .details {
   /* border: solid 1px blue; */
   /* background-color: #F2F9F2; */
-  background-color: #EEF7FD;
-  margin-bottom: 1%;
-  padding: 2%;
+  /* background-color: #EEF7FD; */
+  /* margin-bottom: 1%;
+  padding: 2%; */
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
+    border: solid 3px #EEF7FD;
+    margin-bottom: 2%;
 }
 /******************************/
 /**** success and error modals   *********/
